--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6,8 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1BTToXN_b_elFDrm1_DiAoATSrIks9uUK",
-      "authorship_tag": "ABX9TyOn7EFK0XYloXraBsGi74sq",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOn7EFK0XYloXraBsGi74sq"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Doaa-Said/Ai-projects-_-Nti-/blob/main/Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
